fix nav bar small screens dark mode switch

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ nav ul {
     flex-wrap: wrap;
     flex-grow: 1;
     padding: 10px;
+    align-items: center;
 }
 
 nav ul li {
